hphp/hack/test/typecheck/readonly/prop.php.legacy_decl.exp
File "prop.php", line 22, characters 12-13:
This property returns a readonly value. It must be explicitly wrapped in a readonly expression. (Typing[4412])
  File "prop.php", line 6, characters 19-21:
  The property is defined here.
